# python-native-debug-demo

./: CMakeLists.txt  README.md  main.py  pyproject.toml
src/: calculator.c
